update gitignore (add google file ignore) add docker compose add google provider options rename timetable options add google calendar integration update period calculation fix :) test

--- a/tgSchedule/appsettings.json
+++ b/tgSchedule/appsettings.json
@@ -4,5 +4,9 @@
     "Username": "USERNAME",
     "Password": "PASSWORD",
     "TimetableUrl": "URL_TO_TIMETABLE"
+  },
+  "GoogleProvider": {
+    "GoogleServiceAccountJsonPath": "PATH_TO_GOOGLE_INTEGRATION_SECRETS_JSON",
+    "CalendarName": "SHARED_CALENDAR_TO_MANAGE"
   }
 }
